# kernel

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  build_log_final.txt  build_log_final_2.txt  build_log_final_3.txt
.agent/workflows/: microkernel-ipc-optimization.md
docs/: IPC_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md
linkers/: riscv32.ld
src/: alternative.rs  cpu_set.rs  cpu_stats.rs  debugger.rs  event.rs  externs.rs  gdt.rs  ipc.rs  log.rs  macros.rs  main.rs  misc.rs  panic.rs  percpu.rs  preempt.rs  profiling.rs  ptrace.rs  scheduler.rs  stubs.rs  time.rs
src/acpi/: README.md  gtdt.rs  hpet.rs  mod.rs
src/allocator/: README.md  linked_list.rs  mod.rs
src/arch/: README.md  mod.rs
src/asm/: README.md
src/common/: README.md  aligned_box.rs  int_like.rs
src/context/: README.md  context.rs  file.rs  list.rs  memory.rs  mod.rs  optimized_switch.rs  page_count.rs  reap.rs  signal.rs  switch.rs  timeout.rs
src/devices/: README.md  uart_16550.rs
src/dtb/: README.md  irqchip.rs  mod.rs
src/memory/: README.md  mod.rs
src/scheme/: README.md  acpi.rs  debug.rs  dtb.rs  event.rs  gal.rs  irq.rs  memory.rs  mod.rs  pipe.rs  proc.rs  ring.rs  ring_bench.rs  root.rs  serio.rs  user.rs
src/startup/: README.md
src/sync/: README.md  lockfree_queue.rs  mod.rs  optimized_wait_queue.rs  ordered.rs  priority.rs  wait_condition.rs  wait_queue.rs
src/syscall/: README.md  debug.rs  fs.rs  futex.rs  memory.rs  mod.rs  personality.rs  privilege.rs  process.rs  time.rs  usercopy.rs
src/tests/: stress_test.rs
src/topology/: README.md  mod.rs
targets/: riscv32-unknown-kernel
(+114 files in other folders)
