[package]
name = "kernel"
version = "0.2.0"
edition = "2024"

[dependencies]
bitflags = "2.4.1"
linked_list_allocator = "0.10.5"
log = "0.4.20"
rmm = { path = "rmm", default-features = false }
spin = "0.9.8"
# parking_lot = { version = "0.12", default-features = false } # Removed due to build errors
rustc-demangle = "0.1.23"
raw-cpuid = "10.7.0"
slab = { version = "0.4", default-features = false }
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "inline-more"] }
arrayvec = { version = "0.7", default-features = false }
object = { version = "0.32", default-features = false, features = ["read_core", "elf"] }
redox-path = "0.2"
syscall = { package = "redox_syscall", version = "0.5" }

[dependencies.goblin]
version = "0.7.1"
default-features = false
features = ["elf32", "elf64"]

[build-dependencies]
toml = "0.8"

[target.'cfg(any(target_arch = "riscv64", target_arch = "riscv32"))'.dependencies]
sbi-rt = "0.0.2"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
x86 = { version = "0.52.0", default-features = false }

[features]
default = ["multi_core", "serial_debug", "syscall_debug", "debugger"]
multi_core = []
serial_debug = []
syscall_debug = []
debugger = []
acpi = []
graphical_debug = []
profiling = []

x86 = []
x86_64 = []
aarch64 = []
riscv64 = []
i686 = []
riscv32 = []
arm = []
mips = []
powerpc = []
s390x = []
hexagon = []

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "abort"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"